# mailboar

./: .dockerignore  .eslintrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cargo_publish.sh  cog.toml  package.json
.github/workflows/: ci.yml  release.yml
assets/: index.js
assets/config/: webpack.common.js  webpack.prod.js
assets/script/: app.js
assets/script/components/: index.js
assets/script/components/message-attachments/: MessageAttachments.vue  index.js
assets/script/components/message-detail-definition/: MessageDetailDefinition.vue
assets/script/components/message-html/: MessageHtml.vue
assets/script/components/message-list/: MessageList.vue  index.js
assets/script/components/message-list-item/: MessageListItem.vue  index.js
assets/script/helpers/: email.js
assets/script/pages/: IndexPage.vue  MessagePage.vue
assets/script/plugins/: axios.js
assets/style/vendors/: _vendors.scss
crates/backend/: Cargo.toml
crates/backend/src/: email.rs  http.rs  lib.rs  models.rs  parse_email.rs  repository.rs  smtp.rs  sse_clients.rs
crates/backend/tests/: http_server.rs  smtp_server.rs
crates/frontend/: .stylelintrc  Cargo.toml  eslint.config.mjs  jsconfig.json  package.json  pnpm-lock.yaml  rspack.config.js
crates/frontend/assets/: index.js
crates/frontend/assets/config/: webpack.common.js  webpack.prod.js
crates/frontend/assets/script/: App.vue  app.js
crates/frontend/assets/script/components/: index.js
crates/frontend/assets/script/components/app-header/: AppHeader.vue  index.js
crates/frontend/assets/script/components/empty-state/: EmptyState.vue  index.js
crates/frontend/assets/script/components/message-detail-definition/: MessageDetailDefinition.vue  index.js
crates/frontend/assets/script/components/message-list/: MessageList.vue
crates/frontend/assets/script/components/message-list-item/: MessageListItem.vue
crates/frontend/assets/script/components/send-message-modal/: SendMessageModal.vue  index.js
crates/frontend/assets/script/components/toast-notifications/: ToastNotifications.vue  index.js
crates/frontend/assets/script/composables/: useToast.js
crates/frontend/assets/script/mixins/: email.js
crates/frontend/assets/script/pages/: IndexPage.vue  MessagePage.vue  NotFoundPage.vue
crates/frontend/assets/style/config/: _bootstrap.scss  _config.scss
crates/frontend/src/: asset.rs  lib.rs
crates/frontend/src/templates/: index.rs
crates/frontend/templates/: index.html  layout.html
frontend/: package.json
frontend/assets/config/: webpack.common.js
frontend/assets/script/components/message-detail-definition/: MessageDetailDefinition.vue
frontend/assets/script/components/message-html/: index.js
frontend/assets/script/helpers/: email.js
frontend/assets/script/pages/: IndexPage.vue
mailboar/: Cargo.toml  package.json
mailboar/assets/config/: webpack.dev.js
mailboar/assets/script/components/message-html/: MessageHtml.vue
mailboar/assets/script/mixins/: email.js
mailboar/assets/script/pages/: IndexPage.vue
mailboar/src/: asset.rs  main.rs
mailboar/templates/: layout.html
src/: main.rs  options.rs
src/templates/: index.rs
templates/: index.html  layout.html
test/fixtures/: email.eml
tiny-mailcatcher/: Cargo.toml
tiny-mailcatcher/src/: event.rs  http.rs  lib.rs  smtp.rs
