[package]
name = "mailboar"
version = "0.1.4"
edition = "2021"
description = "A web interface for Tiny MailCatcher, a MailCatcher clone"
license = "MIT"

[dependencies]
structopt = { version = "0.3", default-features = false }
env_logger = { version = "0.10", default-features = false }
log = "0.4"
tiny-mailcatcher = "0.9.3"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
askama = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = "0.6.7"
