[package]
name = "mailboar"
version = "0.1.4"
edition = "2021"
description = "A web interface for Tiny MailCatcher, a MailCatcher clone"
license = "MIT"

[dependencies]
askama = "0.11"
axum = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tiny-mailcatcher = "0.9.3"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
