[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT"
homepage = "https://github.com/aeyoll/mailboar"
documentation = "https://github.com/aeyoll/mailboar"
description = "A web interface for Tiny MailCatcher, a MailCatcher clone"
repository = "https://github.com/aeyoll/mailboar"

[package]
name = "mailboar"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[workspace]
members = [
    "crates/frontend",
    "crates/backend",
]
resolver = "2"

[workspace.dependencies]
mailboar_backend = { path = "crates/backend", version = "0.4.0" }
mailboar_frontend = { path = "crates/frontend", version = "0.4.0" }
axum = "0.7.5"
env_logger = { version = "0.11.3", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
mailboar_backend = { workspace = true }
mailboar_frontend = { workspace = true }
axum = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = {  workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
structopt = { version = "0.3", default-features = false }

[profile.release]
lto = true      # Enable Link Time Optimization.
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
