[package]
name = "tiny-mailcatcher"
version = "0.9.3"
authors = ["Pieter van den Ham <pevandenham@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A tiny MailCatcher clone"
readme = "README.md"
repository = "https://github.com/pevdh/tiny-mailcatcher"
keywords = ["email", "mailcatcher", "smtp", "mta"]
categories = ["development-tools"]

[[bin]]
name = "tiny-mailcatcher"
path = "src/bin/tiny-mailcatcher.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
env_logger = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
log = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1.5.4"
mailparse = "0.13"
memchr = "2.4.0"
routerify = "3"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
axum = "0.7.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "tokio1-native-tls"] }
