[package]
name = "mailboar_backend"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-stream = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.9", default-features = false }
futures = "0.3"
log = "0.4"
mailparse = "0.15.0"
memchr = "2.4.0"
regex = "1.5.4"
routerify = "3"
tokio-stream = "0.1.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "tokio1-native-tls"] }

[lib]
name = "mailboar_backend"
path = "src/lib.rs"
