[package]
name = "mailboar_backend"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
mailparse = "0.15.0"
memchr = "2.4.0"
regex = "1.5.4"
tokio-stream = "0.1.15"
lettre = { version = "0.11.7", features = ["serde", "tokio1", "tokio1-native-tls"] }
mail-parser = "0.9.3"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }

[lib]
name = "mailboar_backend"
path = "src/lib.rs"
