[package]
name = "mailboar_backend"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
mailparse = "0.16.1"
memchr = "2.7.6"
regex = "1.12.2"
tokio-stream = "0.1.18"
lettre = { version = "0.11.19", features = ["serde", "tokio1", "tokio1-native-tls"] }
mail-parser = "0.11.1"
email_address = "0.2.9"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }

[lib]
name = "mailboar_backend"
path = "src/lib.rs"
